src/css/tasks.css
.input-box-container {
  display: flex;
  align-items: center; /* Aligns items vertically */
  top: 24px;

  background-color: var(--color-background);
  /* the below allows the input box to be always on top */
  width: var(--width-main-canvas);
  position: fixed;
  z-index: 900;
}

.vertical-container {
  display: flex;
  flex-direction: column;
}

.heading-1 {
  font-size: 81%;
  text-transform: uppercase;
  color: var(--color-task-list-header);
  padding-top: 10px;
  margin-bottom: 5px;
}

.heading-n {
  font-size: 81%;
  text-transform: uppercase;
  color: var(--color-task-list-header);
  padding-top: 20px;
  margin-bottom: 5px;
}

/* To set the bottom border of a <div> tag to be smaller than the full width of
the <div>, which I want to do b/c I'm using rounded edges (i.e., a border radius),
I will use a CSS pseudo-element (in this case, the .task::after element). */
.task {
  position: relative; /* Needed for positioning the pseudo-element */
  display: flex;
  align-items: center;
  padding: 0px 10px 0px 10px;
  border-radius: 5px;
}

.task::after {
  content: ""; /* Required for pseudo-elements */
  display: block; /* Make it a block element */
  width: 95%; /* Set the desired width of the border */
  height: 1px; /* Set the height of the border */
  background-color: var(--color-action-separator); /* Border color */
  position: absolute; /* Position it absolutely */
  left: 50%; /* Center it horizontally */
  bottom: 0; /* Position at the bottom */
  transform: translateX(-50%); /* Adjust for centering */
}

/* When an element with the .task-title class gains focus, change the background
of the parent .task element */
.task:has(> .task-title:focus) {
  background-color: var(--color-selected);
}

.task-list {
  width: var(--width-main-canvas);
  padding-top: 20px;
  display: flex;
  flex-direction: column;
}

.task-title {
  flex: 1;
  margin: 6px;
  padding: 6px;
  outline: 0px solid transparent;

  white-space: nowrap;       /* Prevent line breaks */
  overflow: hidden;          /* Hide overflowing text */
  text-overflow: ellipsis;   /* Add ellipsis at the end */
}

.task-title-is-editing {
  flex: 1;
  margin: 6px;
  padding: 6px;
  outline: 0px solid transparent;
  background-color: var(--color-input);
}

.task-title-completed,
.task-title-deleted {
  color: var(--color-completed-task-title);
}

.task-selected {
  background-color: var(--color-selected) !important;
  font-weight: bold;
}

.task-empty {
  display: flex;
  padding: 0px 10px 0px 10px;
  border-radius: 5px;
}

.draggable-container {
  border-radius: 5px;
}

.dragover-completed {
  background-color: rgba(255, 255, 255, 0.05); /* Dimming effect */
}

.dragging {
  background-color: var(--color-selected);
  transform: scale(0.95);  /* Decrease div size */
}

.flagged {
  color: var(--color-purple) !important;
}

.display-none {
  display: none !important;
}

.sidebar {
  position: fixed;
  top: 0px;
  left: 480px;
  width: 300px;
  height: 100vh;
  background: var(--color-sidebar);
  transition: 0.3s;
  z-index: 500;
}

.sidebar-icon-container {
  width: 100%;
  height: 100vh;
  justify-content: center;
  vertical-align: middle;
  display: flex;
}

.quick-actions {
  display: flex;
  margin-right: 4px;
}

/*********************************************
 * Elements
 *********************************************/

#addTaskInputBox {
  flex: 1;
  border: 1px solid transparent;
  border-radius: 5px;
  box-shadow: none;
  padding: 9px;
  outline: none;
  box-sizing: border-box;
}

/* style to use if the "add task" input box has focus or has text */
#addTaskInputBox:focus {
  background-color: var(--color-background);
  border: 1px solid var(--color-purple);
  color: var(--color-primary-text) !important;
}

#addTaskInputBox:not(:placeholder-shown) {
  color: var(--color-secondary-text);
}

#listTasksArea {
  margin: 30px 0px 0px 0px;
}

#taskDetails {
  top: 0px;
  left: 480px;
  width: 300px;
  padding: 40px 20px 20px 20px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  height: 100vh; /* Full viewport height */
}

/* For the title on the sidebar (if there is no text) */
.placeholder {
  color: var(--color-task-action-text) !important;
  top: 8px !important;
  left: 8px !important;
  font-size: 130%;
  font-weight: bold;
}

/* For the title in the list (if there is no text) */
.noTitle {
  color: var(--color-red) !important;
}

/*******************************************
 * Notes
 *******************************************/

#notesTextArea {
  background: var(--color-sidebar);
  resize: none;
  margin-left: 8px;
  padding-right: 20px;
  width: 260px;
}

.ql-editor li[data-list=checked] > .ql-ui:before,
.ql-editor li[data-list=unchecked] > .ql-ui:before
{
  font-size: 136% !important;
  font-weight: 600 !important;
  margin-left: -1.6rem !important; 
  margin-top: -1.4rem !important; 
}

.ql-editor {
  padding: 0px !important;
  tab-size: 2 !important;
}

div.ql-editor.ql-blank::before {
  left: 0px !important;
}

.ql-editor.ql-blank::before {
  color: var(--color-task-action-text) !important; /* Change this to your desired color */
  font-style: normal !important;
}

.ql-editor ul, .ql-editor ol, .ql-editor li {
  padding-left: .6rem !important; /* Adjust this value to change the base indent */
}

.ql-editor li.ql-indent-1 {
  padding-left: 1.2rem !important; /* Adjust for first level indent */
}

.ql-editor li.ql-indent-2 {
  padding-left: 1.8rem !important; /* Adjust for second level indent */
}

.ql-editor li.ql-indent-3 {
  padding-left: 2.4rem !important; /* Adjust for second level indent */
}

.ql-editor li.ql-indent-4 {
  padding-left: 3.0rem !important; /* Adjust for second level indent */
}

.ql-editor li.ql-indent-5 {
  padding-left: 3.6rem !important; /* Adjust for first level indent */
}

.ql-editor li.ql-indent-6 {
  padding-left: 4.2rem !important; /* Adjust for second level indent */
}

.ql-editor li.ql-indent-7 {
  padding-left: 4.8rem !important; /* Adjust for second level indent */
}

.ql-editor li.ql-indent-8 {
  padding-left: 5.4rem !important; /* Adjust for second level indent */
}

.ql-editor li.ql-indent-9 {
  padding-left: 6.0 rem !important; /* Adjust for second level indent */
}

.ql-editor a {
  color: var(--color-purple);
  text-decoration: none !important;
}

.ql-editor a:not(.ql-close)::before,
.ql-editor a:not(.ql-close)::after {
  display: none !important;
}

